# docban_ai

./: .gitignore  AGENTS.md  LICENSE  Pitch Deck - Thanh Thong.pptx  README.md  deploy.sh  plan_1.md  plan_2.md  plan_3.md  plan_4.md  plan_5.md  plan_6.md
be/: .db.env.example  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
be/alembic/: env.py
be/app/: __init__.py  config.py  conversation_agent.py  db.py  embeddings.py  external_search.py  form_ai_review.py  form_cli.py  form_conversation.py  form_export.py  form_ingestion.py  form_llm.py  form_validation.py  graph.py  knowledge_cli.py  knowledge_ingestion.py  legal_package.py  llm.py  logging_config.py  main.py  procedure_catalog.py  procedure_cli.py  procedure_embeddings.py  procedure_ingestion.py  procedure_pipeline.py  procedure_rag.py  procedure_settings.py  rag.py  rag_types.py  schemas.py  session_store.py  structured_query.py  translation.py
be/scripts/: calibrate_form_coordinates.py
be/tests/: test_chat.py  test_config.py  test_evaluation.py  test_form_ai_review.py  test_form_conversation.py  test_form_export.py  test_form_ingestion.py  test_form_validation.py  test_forms_api.py  test_knowledge_ingestion.py  test_legal_package.py  test_llm.py  test_procedure_ingestion.py  test_procedure_pipeline.py  test_procedure_rag.py  test_procedure_settings.py  test_rag.py  test_rag_vertical_slice.py  test_session_store.py  test_voice.py
be/voice_ai/: __init__.py  speech_to_text.py
be/voice_app/: speech_to_text.py
civi project/: app.py  (+7 more)
(+197 files in other folders)
