[project]
name = "icivi-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=0.2,<1",
  "pydantic-settings>=2.6,<3",
  "redis>=5.2,<6",
  "rich>=13.9,<15",
  "uvicorn[standard]>=0.32,<1",
]

[dependency-groups]
dev = [
  "fakeredis>=2.26,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
