[project]
name = "icivi-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "langgraph>=0.2,<1",
  "pgvector>=0.3,<1",
  "pypdf>=5.1,<6",
  "pydantic-settings>=2.6,<3",
  "redis>=5.2,<6",
  "rich>=13.9,<15",
  "sentence-transformers>=3.0,<6",
  "sqlalchemy>=2.0,<3",
  "torch>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
  "reportlab>=4,<5",
]

[dependency-groups]
dev = [
  "fakeredis>=2.26,<3",
  "pdfplumber>=0.11,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
